--- a/secret-app/src/app/auth/login/login.component.html
+++ b/secret-app/src/app/auth/login/login.component.html
@@ -3,13 +3,18 @@
         <div class="content-wrapper d-flex align-items-center auth auth-bg-1 theme-one">
           <div class="row w-100">
             <div class="col-lg-4 mx-auto">
-              <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
+              <h2 class="text-center mb-4" style="color: white;">Sign-in</h2>
               <div class="auto-form-wrapper">
-                <form action="#">
+                <form  [formGroup]="signInForm"
+                       autocomplete="off"
+                       (ngSubmit)="signIn()">
                   <div class="form-group">
-                    <label class="label">Usuario</label>
+                    <label class="label">User</label>
                     <div class="input-group">
-                      <input type="email" class="form-control" placeholder="Email">
+                      <input type="email" 
+                             class="form-control" 
+                             placeholder="Email"
+                             formControlName="email">
                       <div class="input-group-append">
                         <span class="input-group-text">
                           <i class="mdi mdi-check-circle-outline"></i>
@@ -18,9 +23,12 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <label class="label">Contraseña</label>
+                    <label class="label">Password</label>
                     <div class="input-group">
-                      <input type="password" class="form-control" placeholder="*********">
+                      <input type="password" 
+                             class="form-control" 
+                             placeholder="*********"
+                             formControlName="password">
                       <div class="input-group-append">
                         <span class="input-group-text">
                           <i class="mdi mdi-check-circle-outline"></i>
@@ -28,15 +36,23 @@
                       </div>
                     </div>
                   </div>
+                  <div class="row">
+                    <div class="col text-danger">
+                        <p *ngIf="email?.invalid && (email?.dirty || email?.touched)">The email is required</p>
+                        <p *ngIf="password?.invalid && (password?.dirty || password?.touched)">The password is required</p>
+                    </div>
+                  </div>  
                   <div class="form-group">
-                    <button class="btn btn-primary submit-btn btn-block">Login</button>
+                    <button type="submit" 
+                            class="btn btn-primary submit-btn btn-block"
+                            [disabled]="!signInForm.valid">Login</button>
                   </div>
                   
                   
                   <div class="text-block text-center my-3">
-                    <span class="text-small font-weight-semibold">No estas registrado? </span>
+                    <span class="text-small font-weight-semibold">Don't have an account? </span>
                     <br>
-                    <a href="" class="text-black text-small">Crear una cuenta</a>
+                    <a href="" class="text-black text-small">Create an account</a>
                   </div>
                 </form>
               </div>
