--- a/secret-app/src/app/auth/login/login.component.html
+++ b/secret-app/src/app/auth/login/login.component.html
@@ -52,7 +52,7 @@
                   <div class="text-block text-center my-3">
                     <span class="text-small font-weight-semibold">Don't have an account? </span>
                     <br>
-                    <a href="" class="text-black text-small">Create an account</a>
+                    <a [routerLink]="['/signUp']">Create an account</a>
                   </div>
                 </form>
               </div>
