--- a/secret-app/src/app/pages/secret/secret.component.html
+++ b/secret-app/src/app/pages/secret/secret.component.html
@@ -1,1 +1,77 @@
-<p>secret works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-4">
+
+        <table class="table-light table-100">
+            <thead>
+                <tr>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="table-active">
+                    <div class="row">
+                        <div class="col-sm-2">
+                           <i class="fa fa-right-to-bracket px-1 py-3"></i>
+                        </div>
+                        <div class="col-sm-10">
+                           <li>GMAIL</li>
+                           <li>test@gmail.com</li>
+                        </div>
+                   </div>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="row">
+                             <div class="col-sm-2">
+                                <i class="fa fa-right-to-bracket px-1 py-3"></i>
+                             </div>
+                             <div class="col-sm-10">
+                                <li>GMAIL</li>
+                                <li>test@gmail.com</li>
+                             </div>
+                        </div>
+                    </td>
+                </tr>
+               
+            </tbody>
+        </table>
+
+      </div>
+      <div class="col-sm-8">
+        <h5 class="card-title">ITEM INFORMATION</h5>
+        <form>
+            <div class="mb-3">
+              <label for="loginName1" class="form-label">Name</label>
+              <input type="text" class="form-control" id="loginName1" aria-describedby="Title secret">
+              <div id="loginName" class="form-text">The label to identify this account</div>
+            </div>
+            <div class="mb-3">
+                <label for="account1" class="form-label">Account</label>
+                <input type="text" class="form-control" id="account1" aria-describedby="Account name">
+                <div id="account" class="form-text">Account name</div>
+              </div>
+            <div class="mb-3">
+              <div class="row">
+                <label for="password1" class="form-label">Password</label>
+              </div>  
+              <div class="row">
+                <div class="col">
+                    <div class="input-group">
+                     
+                        <input type="password" class="form-control" placeholder="******">
+                        <div class="input-group-text"> 
+                             <a class="nav-link cursor">
+                                <i class="fa fa-share-from-square"></i>
+                             </a> 
+                        </div>  
+                    </div>
+                </div>
+               
+              </div>
+            </div>        
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+      </div>
+    </div>
+  </div>
