--- a/secret-app/src/app/shared/footer/footer.component.html
+++ b/secret-app/src/app/shared/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container-fluid clearfix">
+      <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">All rights reserved © 20XX
+        <a href="https://thinks-in-programs" target="_blank">Gio developer</a>.</span>
+      <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">It is handicraft
+        <i class="fa fa-heart text-danger"></i>
+      </span>
+    </div>
+</footer>
